修复Sonar的错误